	move shadework.h to optical/shadework.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])shadefuncs\.h/\1optical.h/g
	move shadefuncs.h to optical/shadefuncs.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])light\.h/#include "bn.h"\n#include "raytrace.h"\n\1optical\/light.h/g
	move light.h to optical/light.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])plastic\.h/\1optical\/plastic.h/g
	move plastic.h to optical/plastic.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])rtgeom\.h/\1rt\/geom.h/g
	move rtgeom.h to rt/geom.h [7.25]
s/rt_vlist_get_cmd_description/bn_vlist_get_cmd_description/g
s/rt_ck_vlist/bn_ck_vlist/g
s/rt_vlist_export/bn_vlist_export/g
s/rt_vlblock_free/bn_vlblock_free/g
s/rt_vlblock_find/bn_vlblock_find/g
	move vlist functions from librt to libbn [7.25]
s/([[:space:],\(,"])bn_tcl/\1tclcad_bn/g
s/([[:space:],\(,"])rt_tcl_rt/\1tclcad_rt/g
s/([[:space:],\(,"])rt_tcl/\1tclcad_rt/g
	tcl library registrations moved to libtclcad [7.25]
s/rt_grow_boolstack/rt_bool_growstack/g
	rename with consistent prefixes [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])obj\.h/\1dm\/bview.h/g
s/GED_VIEW_OBJ_NULL/VIEW_OBJ_NULL/g
	move view_obj to dm/bview.h [7.25]
s/BU_PTBL_CLEAR_I\((.*)\)/BU_PTBL_SET(\1, (long*)0)/g
	replace BU_PTBL_CLEAR_I into the BU_PTBL_SET command [7.25]
s/BU_PTBL_END\(([^\)]*)\)/(\1)->end/g
        replace BU_PTBL_END with direct ptbl peek or BU_PTBL_LEN [7.25]
s/bu_free_argv/bu_argv_free/g
s/bu_dup_argv/bu_argv_dup/g
s/bu_dupinsert_argv/bu_argv_dupinsert/g
	bu_*_argv -> bu_argv_* [7.25]
s/bu_dir_list/bu_file_list/g
	bu_dir_list -> bu_file_list [7.25]
s/BU_FNMATCH_NOMATCH/1/g
	don't use an explicit define for the non-matching case [7.25]
s/bu_basename\(([^\)]*)\)/bu_basename(\1, NULL)/g
	pass NULL argument to get a dynamically allocated buffer back [7.25]

7.28
----
s/bu_free_array/bu_free_args/g
        fixed misleading name [7.26]
s/(#[[:space:]]*include[[:space:]]+["<])bu\/rb\.h/\1bu\/redblack.h/g
	clearer header name [7.26]